Modified for compile and static analysis warnings